--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.26.20",
     "gl-matrix": "^3.4.3",
     "pinia": "^2.3.1",
+    "rxjs": "^7.8.1",
     "vite-plugin-glsl": "^1.3.1",
     "vite-plugin-restart": "^0.4.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
     "vue-dock-menu": "github:cheonghakim/vue-dock-menu#v0.0.12",
-    "@mdi/font": "^7.4.47"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/graceful-fs": "^4.1.9",
