--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sass": "^1.74.1",
     "sass-loader": "^13.3.3",
     "typescript": "~5.6.2",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.5",
     "vite-plugin-compression2": "^1.3.3",
     "vite-plugin-minify": "^2.1.0",
